--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ Pillow==2.4.0
 South==0.8.4
 Unidecode==0.04.16
 argparse==1.2.1
+diff-match-patch==20121119
 dj-static==0.0.6
 django-appconf==0.6
 django-compressor==1.3
 django-extra-views==0.6.5
 django-haystack==2.3.1
+django-import-export==0.2.6
 django-oscar==0.7
 django-treebeard==2.0
 gunicorn==19.1.1
@@ -19,4 +21,5 @@ pytz==2014.7
 six==1.8.0
 sorl-thumbnail==11.12
 static3==0.5.1
+tablib==0.10.0
 wsgiref==0.1.2
